Bug 166191 - FILEOPEN RTF Wrong import of character style properties
Summary: FILEOPEN RTF Wrong import of character style properties
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.4
Keywords:
: 164918 (view as bug list)
Depends on:
Blocks: RTF-Character
  Show dependency treegraph
 
Reported: 2025-04-15 09:31 UTC by Oliver Specht (CIB)
Modified: 2025-05-20 09:09 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Text with character style (314 bytes, application/msword)
2025-04-15 09:31 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2025-04-15 09:31:52 UTC
Created attachment 200344 [details]
Text with character style

The text of the second paragraph in the attachment has a character style (\cs) applied which contains font height 16pt and bold. 
In Writer the text is imported as 16pt and bold. Word imports as 12pt and not bold.
Comment 1 Commit Notification 2025-04-23 15:12:53 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5268e13d3924a62f164f5c2b018c8289fbcc1ac4

tdf#166191 character style properties only applied if repeated

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-05-05 09:55:34 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/dd6e982f289ed5e31387465a1306f65e7e6c7e64

tdf#166191 character style properties only applied if repeated

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gabor Kelemen (Collabora) 2025-05-20 09:09:54 UTC
*** Bug 164918 has been marked as a duplicate of this bug. ***