tdf#166191 character style properties only applied if repeated

Reset character properties that are not repated at run level also if
- the text run is in a table
- there is no style with the index 0 ('Normal')
Change-Id: I840178d727a157b628cb359e5c2798c1455cd555

Change-Id: Id04a501e156e33804e6b99b13688eef1cb899e6e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184281
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>